--- a/index.html
+++ b/index.html
@@ -6,17 +6,88 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <header>
 
+    <header>
+        <a href="./index.html">WEBSTUDIO</a>
+        <nav>
+            <ul>
+                <li><a href="#studio">Studio</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
+        <address>
+            <a href="malito:info@devstudio.com">info@devstudio.com</a>
+            <a href="tell:+11(000)1111111">+11(000)1111111</a>
+        </address>
     </header>
 
     <main>
+        <section>
+            <h1>Effective Solutions
+            for Your Business</h1>
+            <a href="./index.html" class="button">Order Service</a>
+        </section>
+
+        <section>
+            <h2>Our benefits</h2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Our team</h2>
+            <ul>
+                <li>
+                    <img src="" alt="Mark Guerrero">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="" alt="Tom Ford">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="" alt="Camila Garcia">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="" alt="Daniel Wilson">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+
+            </ul>
+        </section>
+
+
+
+
 
     </main>
 
     <footer>
-
+        <a href="">WEBSTUDIO</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
