--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
             <h2>Our team</h2>
             <ul>
                 <li>
-                    <img src="" alt="Mark Guerrero">
+                    <img src="./images/img-3.jpg" alt="Mark Guerrero">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="" alt="Tom Ford">
+                    <img src="./images/img-2.jpg" alt="Tom Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="" alt="Camila Garcia">
+                    <img src="./images/img-1.jpg" alt="Camila Garcia">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="" alt="Daniel Wilson">
+                    <img src="./images/img.jpg" alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
