--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 <body>
 
     <header>
-        <a href="./index.html">WEBSTUDIO</a>
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="#studio">Studio</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+
         <address>
-            <a href="malito:info@devstudio.com">info@devstudio.com</a>
-            <a href="tell:+11(000)1111111">+11(000)1111111</a>
+            <ul>
+                <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tell:+11(000)1111111">+11(000)1111111</a></li>
+            </ul>
         </address>
     </header>
 
