--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
             <h1>Effective Solutions
             for Your Business</h1>
-            <a href="./index.html" class="button">Order Service</a>
+            <button type="button">Order Service</button>
         </section>
 
         <section>
@@ -56,7 +56,7 @@
         </section>
 
         <section>
-            <h2>Our team</h2>
+            <h2>Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
